--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
-<a href="/web">Introduction to the web</a></li>
+<a href="https://flatironschool.com">Introduction to the web</a></li>
           <!-- li element documentation: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li -->
  
           <li><a href="/html">Learn HTML</a></li>
